Added the script for parallax behaviour

--- a/client/index.html
+++ b/client/index.html
@@ -37,7 +37,11 @@
     <script src="../bower_components/angular-route/angular-route.js"></script>
     <script src="../bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
     <!-- endbower-->
-
+    <script><script>
+      $(document).ready(function(){
+      $('.parallax').parallax();
+      });
+</script></script>
     <!-- inject:js -->
     <script src="/client/assets/js/scripts.js"></script>
     <!-- endinject-->
