--- a/client/index.html
+++ b/client/index.html
@@ -37,6 +37,8 @@
     <script src="../bower_components/angular-route/angular-route.js"></script>
     <script src="../bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
     <!-- endbower-->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
     <script>
       $(document).ready(function(){
       $('.parallax').parallax();
