Added the header and made changes

--- a/client/index.html
+++ b/client/index.html
@@ -18,10 +18,9 @@
     <link rel="stylesheet" href="/client/assets/css/app.css">
     <!-- endinject-->
 </head>
-
 <body ng-app="meanApp" ng-controller="mainContrl">
     <div class="wrapper">
-        <!--<div class="page-header" ng-controller="NavContrl" ng-include="'views/nav.html'"></div>-->
+        <div class="page-header" ng-controller="NavContrl" ng-include="'views/nav.html'"></div>
         <div class="main_container" ng-view></div>
         <footer>&copy;2017</footer>
     </div>
