--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,7 @@
 </head>
 <body ng-app="meanApp" ng-controller="mainContrl">
     <div class="wrapper">
-        <div class="page-header" ng-controller="NavContrl" ng-include="'views/nav.html'"></div>
+        <div class="page-header" ng-include="'views/nav.html'"></div>
         <div class="main_container" ng-view></div>
         <footer>&copy;2017</footer>
     </div>
